--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "bootstrap": "4.1.1",
     "font-awesome": "4.7.0",
     "gh-pages": "^3.1.0",
+    "lodash": "4.17.10",
+    "prop-types": "15.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "type-check": "^0.4.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
