--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "4.1.1",
     "font-awesome": "4.7.0",
     "gh-pages": "^3.1.0",
+    "joi-browser": "13.4",
     "lodash": "4.17.10",
     "prop-types": "15.6.2",
     "react": "^17.0.1",
